--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -217,30 +217,30 @@ body {
     overflow-y: auto;
     position: relative;
 
-    &::before {
-        content: '';
-        position: absolute;
-        display: inline-block;
-        z-index: 10;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0 0 0 / 65%);
-        transition: all 0.5s ease-in-out;
-        visibility: hidden;
-        opacity: 0;
-    }
+    // &::before {
+    //     content: '';
+    //     position: absolute;
+    //     display: inline-block;
+    //     z-index: 10;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: rgb(0 0 0 / 65%);
+    //     transition: all 0.5s ease-in-out;
+    //     visibility: hidden;
+    //     opacity: 0;
+    // }
 
     &._open {
         transform: scale(0.85);
-        opacity: 0.7;
+        opacity: 0.6;
         touch-action: none;
 
-        &::before {
-            opacity: 1;
-            visibility: visible;
-        }
+        // &::before {
+        //     opacity: 1;
+        //     visibility: visible;
+        // }
     }
 
     section {
