--- a/blocks/feed_work/_index.scss
+++ b/blocks/feed_work/_index.scss
@@ -4,7 +4,7 @@
     width: 100%;
     gap: var(--gap);
     row-gap: calc(7* var(--gap));
-    align-items: baseline;
+    // align-items: baseline;
     justify-content: space-between;
     align-content: stretch;
 
