--- a/blocks/post-category/_index.scss
+++ b/blocks/post-category/_index.scss
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: row;
     gap: .7rem;
-    writing-mode: sideways-lr;
+    // writing-mode: sideways-lr;
+    writing-mode: vertical-rl;
+    text-orientation: sideways;
+    transform: rotate(180deg);
+    white-space: nowrap;
 
     li,
     a {
