Поправил скролл в сафари и теги можно выбирать или единично или множественно в коде

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,7 +110,7 @@ html,
 body,
 #main {
     scroll-behavior: smooth;
-    scrollbar-gutter: stable;
+    // scrollbar-gutter: stable;
     scroll-padding-top: 5.1rem;
 }
 
