--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -422,15 +422,40 @@ header {
     display: flex;
     flex-direction: row;
     // gap: 0.7rem 1rem;
-    gap: .5rem;
+    gap: calc(var(--font-size--1) * .5);
     padding: 1rem 0;
-
 
 
     a {
         // text-decoration: none;
     }
+}
 
+#menu-main {
+    gap: calc(var(--font-size--1) * 1);
+
+    li {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        gap: calc(var(--font-size--1) * .3);
+
+        ul {
+            display: flex;
+            flex-direction: row;
+            gap: calc(var(--font-size--1) * .3);
+        }
+    }
+}
+
+#menu-burger {
+    li {
+        ul {
+            a {
+                padding: calc(0.5 * var(--padding)) calc(1.1 * var(--margin-width-50));
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 1600px) {}
@@ -496,6 +521,16 @@ header {
 
             a {
                 padding: var(--padding) var(--padding);
+            }
+        }
+    }
+
+    #menu-burger {
+        li {
+            ul {
+                a {
+                    padding: var(--padding) calc(2.5 * var(--padding));
+                }
             }
         }
     }
