--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -18,7 +18,8 @@ header {
         color: var(--color-primary-blend);
         mix-blend-mode: difference;
         border-bottom: 0;
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
+        // font-weight: 365;
     }
 
     *:link {
@@ -163,11 +164,19 @@ header {
 
 .header__top__logo {
     text-decoration: none;
-    font-size: var(--font-size--1);
 }
 
 
+.header__top__action {
+    display: flex;
+    flex-direction: row;
+    gap: .8rem;
 
+    .search-trigger-icon {
+        position: relative;
+        top: .1rem;
+    }
+}
 
 .header__burger__menu {
     position: fixed;
@@ -310,7 +319,7 @@ header {
 
 .header__top__burger {
     position: relative;
-    top: -3px;
+    top: -2px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -331,7 +340,7 @@ header {
 .bar {
     position: relative;
     transform: translateY(10px);
-    background: white;
+    background: var(--color-primary-blend);
     transition: all 0ms 200ms;
 }
 
@@ -344,7 +353,7 @@ header {
     position: absolute;
     left: 0;
     bottom: 5px;
-    background: white;
+    background: var(--color-primary-blend);
     transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -353,7 +362,7 @@ header {
     position: absolute;
     left: 0;
     top: 5px;
-    background: white;
+    background: var(--color-primary-blend);
     transition: top 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -512,9 +521,11 @@ header {
         position: fixed;
         // border-bottom: 0;
     }
-
+.header__top__burger{
+    top: -1px;
+}
     .header__burger__menu {
-        height: calc(93dvh - 1.5 * var(--padding));
+        height: calc(90dvh - 1.5 * var(--padding));
 
         .header__burger__links {
 
