--- a/blocks/post-category/_index.scss
+++ b/blocks/post-category/_index.scss
@@ -19,5 +19,6 @@
         text-transform: lowercase;
         display: inline-block;
         height: max-content;
+        text-decoration: none;
     }
 }
