--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,13 +109,15 @@
 html,
 body {
     scroll-behavior: smooth;
-    // scrollbar-gutter: stable;
+    scrollbar-gutter: stable;
     scroll-padding-top: 5.1rem;
 
     background-color: #000;
 }
 
-
+body{
+    min-height: 100vh;
+}
 
 em {
     font-style: italic !important;
@@ -148,11 +150,11 @@ body {
     background-color: var(--color-white);
     color: var(--color-text-primary);
     width: 100%;
-    overflow: hidden;
+    // overflow: hidden;
 
-    &::-webkit-scrollbar {
-        width: 0;
-    }
+    // &::-webkit-scrollbar {
+    //     width: 0;
+    // }
 
     &.page {}
 
@@ -170,12 +172,16 @@ body {
         height: fit-content;
         overflow: auto;
 
-        &::-webkit-scrollbar {
-            width: 5px;
-        }
+        // &::-webkit-scrollbar {
+        //     width: 5px;
+        // }
 
         .more-content {
             height: fit-content !important;
+        }
+
+        .project-media-small{
+            margin-left: 0 !important;
         }
     }
 
@@ -199,32 +205,6 @@ body {
         }
     }
 }
-
-
-
-/* Скрываем скроллбар, но оставляем возможность скроллить */
-body,
-html {
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    position: relative;
-    width: 100vw;
-    min-height: 100vh;
-    padding-right: calc(100vw - 100%);
-    box-sizing: content-box;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-body {
-    -ms-overflow-style: none;
-    /* Для IE и Edge */
-    scrollbar-width: none;
-    /* Для Firefox */
-}
-
 
 
 
@@ -373,7 +353,6 @@ body {
 }
 
 a,
-// a *,
 .link {
     color: var(--color-text-primary);
     opacity: 1;
@@ -579,8 +558,9 @@ li {
     font-weight: 400;
     font-size: var(--font-size-0);
     line-height: 140%;
-}
 
+    // hyphens: auto;
+}
 
 
 
@@ -807,84 +787,11 @@ div {
     }
 }
 
-/* Скролл */
-/* полоса прокрутки (скроллбар) */
-::-webkit-scrollbar {
-    width: 5px;
-    /* ширина для вертикального скролла */
-    height: 5px;
-    /* высота для горизонтального скролла */
-    background-color: #e5e5e500;
-}
-
-/* ползунок скроллбара */
-::-webkit-scrollbar-thumb {
-    background-color: var(--color-text-grey);
-    border-radius: 9em;
-    transition: all .5s;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    opacity: .5;
-    background-color: var(--color-text-primary);
-}
-
-/* Стрелки */
-/* ::-webkit-scrollbar-button:vertical:start:decrement {
-    background: linear-gradient(120deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(240deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(0deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #f6f8f4;
-}
-
-::-webkit-scrollbar-button:vertical:end:increment {
-    background:
-        linear-gradient(300deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(60deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(180deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #f6f8f4;
-}
-
-::-webkit-scrollbar-button:horizontal:start:decrement {
-    background:
-        linear-gradient(30deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(150deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(270deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #f6f8f4;
-}
-
-::-webkit-scrollbar-button:horizontal:end:increment {
-    background:
-        linear-gradient(210deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(330deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
-        linear-gradient(90deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
-    background-color: #f6f8f4;
-} */
-/*# sourceMappingURL=scroll.css.map */
-
 section,
 .section {
     padding-top: var(--padding);
     padding-bottom: var(--padding);
 }
-
-
-// body {
-//     .experience-block:nth-child(n+2) {
-//         padding-top: 0;
-//     }
-
-//     .experience-block:not(:first-child):not(:last-child) {
-//         padding-bottom: 0;
-//         padding-top: 7rem;
-
-//         .experience-list__wrapper {
-//             padding-bottom: 0;
-//         }
-//     }
-
-// }
-
 
 
 ._mobile {
@@ -953,21 +860,21 @@ section,
 }
 
 .post-password__page {
-    width: 100%;
-    height: 64vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // width: 100%;
+    // height: 64vh;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
 }
 
 .post-password-form {
-    max-width: 330px;
-    width: 330px;
-    height: fit-content;
-    padding: var(--padding) 0;
-    margin: 0 auto;
-    // text-align: center;
+    // max-width: 330px;
+    // width: 330px;
+    // height: fit-content;
+    // padding: var(--padding) 0;
+    // margin: 0 auto;
+    // // text-align: center;
 }
 
 // Buttons
@@ -1032,7 +939,7 @@ section,
     color: var(--color-text-grey);
     border: none;
     background-color: #f2f2f2;
-    margin-top: 2rem;
+    // margin-top: 2rem;
     // border-radius: .2rem;
     width: 100%;
 
@@ -1149,7 +1056,9 @@ figcaption {
 }
 
 .pd_width_50 {
-    width: calc(50% - 5px);
+    width: calc(50% - var(--padding));
+    margin-left: var(--margin-width-50);
+    padding-right: var(--padding);
 }
 
 .pd_margin-auto {
@@ -1429,9 +1338,9 @@ figure {
     body {
         // padding-top: 0;
 
-        &::-webkit-scrollbar {
-            // width: 0;
-        }
+        // &::-webkit-scrollbar {
+        //     // width: 0;
+        // }
 
     }
 
@@ -1772,7 +1681,11 @@ figure {
     .pd_width_50 {
         width: 100%;
         margin: auto;
+        margin-left: 0;
+        padding: 0 var(--padding);
     }
+
+
 
     .pd_flex-25 {
         width: 100%;
