--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -2,7 +2,7 @@ header {
     z-index: 100;
     position: sticky;
     height: fit-content;
-    z-index: 90;
+    z-index: 110;
 
     position: fixed;
     top: 0;
@@ -180,8 +180,9 @@ header {
 
 body ul.header__burger__links {
     max-width: 100%;
-    li{
-        
+
+    li {
+
         max-width: 100%;
     }
 }
@@ -190,7 +191,10 @@ body ul.header__burger__links {
     position: fixed;
     transform: translateY(100vh);
     width: 100%;
-    height: calc(93vh - var(--padding));
+    height: calc(99vh - var(--padding));
+    height: 100vh;
+
+    padding-top: calc(1.5rem + var(--font-size-0) + calc(1 * var(--padding)));
     left: 0;
     right: 0;
     bottom: 0;
@@ -537,6 +541,7 @@ body ul.header__burger__links {
 
     .header__burger__menu {
         height: calc(90dvh - 1.5 * var(--padding));
+        height: 100vh;
 
         .header__burger__links {
 
