--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1088,9 +1088,9 @@ figcaption {
     margin-left: auto;
 }
 
-.title__caption {
-    margin-top: calc(var(--gap) * 0.3) !important
-}
+// .title__caption {
+//     margin-top: calc(var(--gap) * 0.3) !important
+// }
 
 figure {
     a {
