--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -14,6 +14,7 @@ header {
     // mix-blend-mode: difference;
 
     * {
+        white-space: nowrap;
         // color: var(--color-primary);
         // color: var(--color-primary-blend);
         color: var(--color-text-primary);
