--- a/blocks/section__first-screen/_index.scss
+++ b/blocks/section__first-screen/_index.scss
@@ -18,9 +18,9 @@
     margin-left: auto;
 }
 
-// .first-screen-title__caption {
-//     margin-top: calc(var(--gap) * .3);
-// }
+.first-screen-title__caption {
+    margin-top: calc(var(--gap) * .3);
+}
 
 .first-screen-caption {
     width: calc(49.75%);
