--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -383,8 +383,9 @@ a,
         // border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     }
 }
-a.no-underline{
-    text-decoration: none ;
+
+a.no-underline {
+    text-decoration: none;
 }
 
 .dashicons,
@@ -1227,24 +1228,10 @@ figure {
         position: relative;
 
         .post-category {
-
-            position: relative;
-            writing-mode: initial;
-            margin-top: calc(var(--gap) * 0.4);
-
-            // * {
-            //     font-size: var(--font-size-0);
-            // }
-        }
-
-        .post-category {
-            // position: absolute;
-            // left: calc(-1.5 * var(--font-size-1));
-            // top: 0;
-        }
-
-        h1 {
-            // margin-top: .7rem !important;
+            padding: 0;
+            position: absolute;
+            margin-top: calc(var(--gap) * 1.3);
+            left: calc(-2 * var(--gap));
         }
 
         h1,
@@ -1676,6 +1663,10 @@ button {
         }
 
         .single-page__content {
+            .post-category {
+                width: calc(100% - 2 * var(--padding));
+                left: calc(0 * var(--padding));
+            }
 
             p,
             h1,
@@ -1765,6 +1756,12 @@ button {
 }
 
 @media screen and (max-width: 480px) {
+    .single-page__content {
+        .post-category {
+            display: none;
+        }
+
+    }
 
     .post-password-form {
         max-width: 100%;
