--- a/components/post-card/post-card__mini/post-card__mini.scss
+++ b/components/post-card/post-card__mini/post-card__mini.scss
@@ -42,7 +42,8 @@
 .post-card__mini__content {
     position: absolute;
     top: 0;
-    left: calc(-.85 * var(--gap));
+    // left: calc(-.85 * var(--gap));
+    left: calc(-1.3 * var(--gap));
 
     display: flex;
     flex-direction: row;
@@ -59,9 +60,9 @@
     h3 a,
     h4 a {
         margin: 0 !important;
-        // text-transform: none;
-        font-size: var(--font-size--2);
-        // font-weight: var(--font-weight-regular);
+        text-transform: none;
+        font-size: var(--font-size-0);
+        font-weight: var(--font-weight-regular);
     }
 }
 
@@ -96,7 +97,11 @@
     }
 }
 
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+    .post-card__mini__content {
+        left: calc(-1.1 * var(--gap));
+    }
+}
 
 @media screen and (max-width: 480px) {
     .post-card__mini__image-link__wrapper {}
